Added ktlint and refactored code

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,9 @@ jobs:
           distribution: 'temurin'
           architecture: x64
 
+      - name: Linting
+        run: ./gradlew ktlintCheck
+
       - name: Assembling
         run: ./gradlew assembleDebug
 
